Alignment and beautification fix

--- a/style.css
+++ b/style.css
@@ -1,11 +1,55 @@
+
 :root{
   font-family: sans-serif;
   --hover-color: rgb(8, 109, 224);
+  --box-shadow: 0px 5px 17px -7px rgba(0, 0, 0, 0.75);
 }
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-size: 1rem;
+  font-weight: normal;
+  letter-spacing: .06rem;
+  line-height: 1.5;
+}
+
+
 
 body,html {
   min-height: 100vh;
   display: flex;
+}
+
+img{
+  display: flex;
+  background-size: cover;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
+  height:100%;
+  margin: 1px;
+  padding: 10px;
+  padding-top: 40px;
+}
+
+.input{
+  display: block;
+  color:#333;
+  border-radius: 5px;
+  margin-right: 10px;
+  padding: 5px;
+}
+
+
+#right-items {
+  min-width: 60vw;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: rgb(245, 245, 245);
 }
 
 #mid-container{
@@ -22,5 +66,38 @@ body,html {
   flex-direction: column;
   padding-left: 45px;
   padding-bottom: 40px;
-  padding-top: 50px;
+  padding-top: 60px;
 }
+
+button{
+  border: none;
+  border-radius: 5px;
+  transition: background-color 0.8s;
+  padding: 8px 25px 8px 25px;
+  font-size: .9rem;
+  box-shadow: var(--box-shadow);
+  margin-bottom: 20px;
+  cursor: pointer;
+  width: fit-content;
+  background-color: lightskyblue;
+}
+
+button:hover {
+  background-color: var(--hover-color);
+}
+
+
+
+
+/*
+.input input[type="text"],
+.input input[type="email"],
+.input input[type="tel"],
+.input input[type="password"] {
+  width: 350px;
+}
+*/
+
+
+
+
